Bug 1006217 - Assertion failure: mValidityMap.Length() == 0, at netwerk/cache2/CacheFileChunk.cpp:392, r=honzab